<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"

        >
        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_nome"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/left"
            />
        <TextView
            android:id="@+id/tvIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_idade"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/left"
            />
        <TextView
            android:id="@+id/tvSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_sexo"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/left"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        >
               <TextView
                android:id="@+id/et_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_url"
                android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/imgSend"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:tooltipText="@string/btn_transmitir"
                android:src="@drawable/envio__sat_lite_48"
                android:scaleType="centerCrop"
                />

        </LinearLayout>


    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/SRLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/lvPessoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>