<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trainer.mobilcode.cadastroapirestatos.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingRight="@dimen/paddingRight"
        android:paddingTop="@dimen/paddingTop">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_idade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_idade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_idade"
                android:inputType="number"
                android:layout_gravity="center_vertical"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_sexo" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="@dimen/paddingLeft"
            android:paddingRight="@dimen/paddingRight"
            android:paddingTop="@dimen/paddingTop">

            <Button android:id="@+id/btn_cadastro"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cadastrar"

                android:theme="@style/MiBotonRaised"
                android:layout_marginTop="@dimen/margingTop40"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
